itinerary to any poste

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
             href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700"
             rel="stylesheet"
         />
+
+      <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
+
     </head>
     <body>
         <app-root class="sidebar-mini sidebar-open"></app-root>
