--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-    <body style="background-color: #00c5ff;font-family: 'Rubik', sans-serif;transition: 0.2s;" class="mat-typography">
+    <!--    <body style="background-color: #00c5ff;font-family: 'Rubik', sans-serif;transition: 0.2s;" class="mat-typography">-->
+    <body class="mat-typography">
         <app-root class="sidebar-mini sidebar-open"></app-root>
     </body>
 </html>
